--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -215,7 +215,7 @@ margin-bottom: 10px;
 
 .footer{
   grid-area: footer;
-  display: flex;
+  display: block;
   background-color: palevioletred;
   align-items: center;
   flex-shrink: 0;
