--- a/Aufgabe3/gta_v3/views/index.ejs
+++ b/Aufgabe3/gta_v3/views/index.ejs
@@ -1,5 +1,107 @@
 <!-- TODO: HTML AUS AUFGABE2 HIERHER KOPIEREN UND DIE BEISPIEL-EINTRÄGE DER DISCOVERY-LISTE MIT DEN FOLGENDEN ZEILEN ERSETZEN -->
+<!DOCTYPE html>
 
-<% if (taglist !== undefined) taglist.forEach(function(gtag) { %>
-    <li><%= gtag.name %> ( <%= gtag.latitude %>,<%= gtag.longitude %>) <%= gtag.hashtag %> </li>
-<% }); %>
+<!-- File origin: VS1LAB A1a -->
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GeoTagApp</title>
+    <link rel="stylesheet" href="./stylesheets/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <header class="header">
+        <img src="./images/location.png" class="header__image" alt="an image of a map and location">
+        <h1 class="header__title">GeoTagApp</h1>
+        <nav class="header__navigation">
+            <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
+        </nav>
+    </header>
+
+    <main class="main">
+        <section class="main__tagging tagging col-3 col-m-5 col-s-10">
+            <h2>Tagging</h2>
+
+            <!-- ############### VS1Lab 1a Form 1 Start -->
+            <form id="tag-form" action="/tagging" method="post">
+
+                <!-- ... your code here ... -->
+                <fieldset class="tagging_field">
+                    <legend>
+                        Add a new GeoTag
+                    </legend>
+                    <div class="tagging__wrapper">
+                        <label for="latitude">Latitude:</label>
+                        <input type="text" name="latitude" id="latitude" placeholder="49.67849" value="<%= locals.latitude %>" readonly>
+
+                        <label for="longitude">Longitude:</label>
+                        <input type="text" name="longitude" id="longitude" placeholder="3.76895" value="<%= locals.longitude %>" readonly>
+
+                        <label for="tagName">Name:</label>
+                        <input type="text" name="tagName" id="tagName" placeholder="e.g. Central Berlin" maxlength="10" required>
+
+                        <label for="hashtag">Hashtag:</label>
+                        <input type="text" name="hashtag" id="hashtag" placeholder="e.g. #ber" pattern="#[A-Za-z0-9]+" maxlength="10">
+                        <button>Add Tag</button>
+                    </div> 
+                </fieldset>
+
+            </form>
+            <!-- ############### VS1Lab 1a Form 1 End -->
+
+        </section>
+
+        <section class="main__discovery discovery col-5 col-s-10">
+            <h2 class="discovery__title">Discovery</h2>
+
+            <!-- ############### VS1Lab 1a Form 2 Start -->
+            <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
+     
+                <!-- ... your code here ... -->
+
+                <fieldset class="search_fieldset">
+                    <legend>Search</legend>
+                    <div class="search_field">
+                        <label for="search_input">Search term or keywords:</label>
+                        <input type="search" id="search_input" name = "searchTerm" placeholder="e.g. Berlin">
+                        <input type="number" id="latitudeSearch" name="latitudeSearch" value="<%= locals.latitude %>" hidden>
+                        <input type="number" id="longitudeSearch" name="longitudeSearch" value="<%= locals.longitude %>" hidden>
+                        <button type="submit" id="submit_search">Search</button>
+                    </div>
+                </fieldset>
+
+            </form>
+            <!-- ############### VS1Lab 1a Form 2 End -->
+
+            <div class="discovery__wrapper">
+                <div class="discovery__taglist">
+                    <ul class="discovery__results" id="discoveryResults">
+                        <% if (taglist !== undefined) taglist.forEach(function(gtag) { %>
+                            <li><%= gtag.Name %> ( <%= gtag.Latitude %>,<%= gtag.Longitude %>) <%= gtag.Hashtag %> </li>
+                        <% }); %>
+                    </ul>
+                </div>
+
+                <div class="discovery__map">
+                    <img src="./images/mapview.jpg" alt="a map with locations" id="mapView" />
+                    <span>Result map</span>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="footer">
+        <span>(c) 2021/22 HKA_IWI_VSYS</span>
+    </footer>
+    <script src="./javascripts/location-helper.js"></script>
+    <script src="./javascripts/geotagging.js"></script>
+    <script src="./javascripts/map-manager.js"></script>
+</body>
+
+</html>
+
